# jax-spring-sim

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  profile_engine.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml  docker-publish.yml  release.yml
benchmarks/: benchmark.py  collision_scaling.py  profile_engine.py
examples/: _common.py  benchmark.py  ensemble.py  hanging_chain.py  inverse_design.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Icons.jsx  scenes.js
frontend/src/lib/: colormap.js  protocol.js  staticFormat.js  useSceneData.js  useSimSocket.js
frontend/src/viewer/: SpringScene.js  SpringViewer.jsx
scripts/: bake_scenes.py
src/jax_spring_sim/: __init__.py  batch.py  builders.py  dynamics.py  egnn.py  energy.py  inverse.py  spatial.py  system.py
src/jax_spring_sim/server/: __init__.py  __main__.py  app.py  config.py  protocol.py  scenes.py
tests/: conftest.py  test_batch.py  test_dynamics.py  test_egnn.py  test_energy.py  test_friction.py  test_grad.py  test_inverse.py  test_obstacles.py  test_server.py  test_spatial.py
