[project]
name = "jax-spring-sim"
version = "0.1.0"
description = "Differentiable, JIT-compiled particle-spring physics in JAX (a SciML demonstrator)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Erik Löffelholz", email = "eriklfholz@googlemail.com" }]
keywords = [
    "jax",
    "differentiable-physics",
    "scientific-machine-learning",
    "sciml",
    "spring-mass",
    "automatic-differentiation",
    "inverse-design",
    "jit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.0",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://erik2810.github.io/jax-spring-sim/"
Repository = "https://github.com/erik2810/jax-spring-sim"
Issues = "https://github.com/erik2810/jax-spring-sim/issues"
Benchmarks = "https://github.com/erik2810/jax-spring-sim/blob/main/BENCHMARKS.md"
Mirror = "https://codeberg.org/erik/jax-spring-sim"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jax_spring_sim = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous var name: m/v are Adam moments, the standard symbols
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]
"examples/*" = ["E402", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["jax_spring_sim"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src"]

# JAX / NumPy ship stubs that target a newer Python grammar than our floor
# (numpy 2.x uses the 3.12 ``type`` statement). We treat them as untyped rather
# than parse their stubs under the 3.10 target.
[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
    "jax",
    "jax.*",
    "jaxlib",
    "jaxlib.*",
    "scipy",
    "scipy.*",
    "matplotlib",
    "matplotlib.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true
